--- a/Source/ThemeBrowser/App.xaml
+++ b/Source/ThemeBrowser/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="StyleInspector.App"
+﻿<Application x:Class="ThemeBrowser.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StyleInspector"
+             xmlns:local="clr-namespace:ThemeBrowser"
              xmlns:aero10="clr-namespace:PresentationTheme.Aero.Win10;assembly=PresentationTheme.Aero.Win10">
   <Application.Resources>
     <DrawingBrush x:Key="CheckeredBrush" Stretch="None" TileMode="Tile"
