--- a/Source/ThemeBrowser/PreviewImageDialog.xaml
+++ b/Source/ThemeBrowser/PreviewImageDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="StyleInspector.PreviewImageDialog"
+﻿<Window x:Class="ThemeBrowser.PreviewImageDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StyleInspector"
+        xmlns:local="clr-namespace:ThemeBrowser"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance {x:Type local:PreviewImageDialogViewModel}}"
         Title="Preview Image"
