--- a/Source/ThemeBrowser/TraceImageDialog.xaml
+++ b/Source/ThemeBrowser/TraceImageDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="StyleInspector.TraceImageDialog"
+﻿<Window x:Class="ThemeBrowser.TraceImageDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:StyleInspector"
+        xmlns:local="clr-namespace:ThemeBrowser"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance {x:Type local:TraceImageDialog}}"
@@ -101,19 +101,19 @@
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="Auto"/>
       </Grid.RowDefinitions>
-      <TextBlock Grid.Row="0" Grid.Column="0" Margin="3" Text="Data"/>
+      <TextBlock Grid.Row="0" Grid.Column="0" Margin="3" Text="Data" VerticalAlignment="Center"/>
       <TextBox Grid.Row="0" Grid.Column="1" Margin="3" Text="{Binding PathData, UpdateSourceTrigger=PropertyChanged}"/>
 
-      <TextBlock Grid.Row="1" Grid.Column="0" Margin="3" Text="Widen"/>
+      <TextBlock Grid.Row="1" Grid.Column="0" Margin="3" Text="Widen" VerticalAlignment="Center"/>
       <TextBox Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding PathWiden}"/>
 
-      <TextBlock Grid.Row="2" Grid.Column="0" Margin="3" Text="Margin"/>
+      <TextBlock Grid.Row="2" Grid.Column="0" Margin="3" Text="Margin" VerticalAlignment="Center"/>
       <TextBox Grid.Row="2" Grid.Column="1" Margin="3" Text="{Binding PathMargin}"/>
 
-      <TextBlock Grid.Row="3" Grid.Column="0" Margin="3" Text="Fill"/>
+      <TextBlock Grid.Row="3" Grid.Column="0" Margin="3" Text="Fill" VerticalAlignment="Center"/>
       <TextBox Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding PathFill}"/>
 
-      <TextBlock Grid.Row="4" Grid.Column="0" Margin="3" Text="Rendered"/>
+      <TextBlock Grid.Row="4" Grid.Column="0" Margin="3" Text="Rendered" VerticalAlignment="Center"/>
       <TextBox Grid.Row="4" Grid.Column="1" Margin="3" Text="{Binding PathRenderedData}" IsReadOnly="True"/>
     </Grid>
     <Border Grid.Row="1" Grid.Column="2" Background="#939393">
