--- a/Source/ThemePreviewer/Samples/TabControlSampleWpf.xaml
+++ b/Source/ThemePreviewer/Samples/TabControlSampleWpf.xaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
   <Grid>
-    <TabControl x:Name="tabControl1" Margin="0,0,2,1">
+    <TabControl x:Name="tabControl1" Width="250" HorizontalAlignment="Left">
       <TabItem Header="Computer Name">
         <Rectangle Fill="Silver"/>
       </TabItem>
