Extract shared classes into separate PresentationTheme.Aero assembly
Especially for the shared attached properties like
TextBoxService.ViewMargin or TreeViewService.UseFullRowSelect a shared
assembly seems inevitable to allow theme-agnostic use.

--- a/Source/ThemePreviewer/Samples/TreeViewSampleWpf.xaml
+++ b/Source/ThemePreviewer/Samples/TreeViewSampleWpf.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:aero10="clr-namespace:PresentationTheme.Aero.Win10;assembly=PresentationTheme.Aero.Win10"
+    xmlns:aero="clr-namespace:PresentationTheme.Aero;assembly=PresentationTheme.Aero"
     mc:Ignorable="d"
     d:DesignHeight="500"
     d:DesignWidth="300">
@@ -14,9 +14,9 @@
       <RowDefinition/>
     </Grid.RowDefinitions>
     <TreeView x:Name="treeView1" Margin="3"
-              aero10:TreeViewService.FullRowSelect="True"/>
+              aero:TreeViewService.FullRowSelect="True"/>
     <TreeView x:Name="treeView2" Margin="3" Grid.Row="1"
-              aero10:TreeViewService.FullRowSelect="True"
-              aero10:TreeViewService.UseExplorerStyle="True"/>
+              aero:TreeViewService.FullRowSelect="True"
+              aero:TreeViewService.UseExplorerStyle="True"/>
   </Grid>
 </UserControl>
