--- a/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
+++ b/Source/PresentationTheme.Aero.Win10/Themes/AeroWin10.NormalColor.xaml
@@ -2,8 +2,9 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:system="clr-namespace:System;assembly=mscorlib"
-  xmlns:aero10="clr-namespace:PresentationTheme.Aero.Win10"
-  xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+  xmlns:po="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+  xmlns:aero="clr-namespace:PresentationTheme.Aero;assembly=PresentationTheme.Aero"
+  xmlns:aero10="clr-namespace:PresentationTheme.Aero.Win10">
 
   <aero10:TypeOfConverter x:Key="TypeOfConverter"/>
 
@@ -62,7 +63,7 @@
                   BorderBrush="{TemplateBinding BorderBrush}"
                   BorderThickness="{TemplateBinding BorderThickness}"
                   SnapsToDevicePixels="True"
-                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="Background">
                 <VisualStateGroup.Transitions>
@@ -187,7 +188,7 @@
     <Setter Property="IsReadOnlyCaretVisible" Value="True"/>
     <Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
     <Setter Property="SelectionOpacity" Value="0.5"/>
-    <Setter Property="aero10:TextBoxService.ViewMargin" Value="0"/>
+    <Setter Property="aero:TextBoxService.ViewMargin" Value="0"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type TextBoxBase}">
@@ -338,7 +339,7 @@
                   BorderThickness="{TemplateBinding BorderThickness}"
                   BorderBrush="{TemplateBinding BorderBrush}"
                   SnapsToDevicePixels="True"
-                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="Common">
                 <VisualStateGroup.Transitions>
@@ -581,7 +582,7 @@
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type CheckBox}">
           <Grid SnapsToDevicePixels="True" Background="Transparent"
-                VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="Common">
                 <VisualStateGroup.Transitions>
@@ -707,7 +708,7 @@
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type RadioButton}">
           <Grid SnapsToDevicePixels="True" Background="Transparent"
-                VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="Common">
                 <VisualStateGroup.Transitions>
@@ -875,7 +876,7 @@
                   BorderThickness="{TemplateBinding BorderThickness}"
                   BorderBrush="{TemplateBinding BorderBrush}"
                   SnapsToDevicePixels="True"
-                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="Common">
                 <VisualStateGroup.Transitions>
@@ -1013,7 +1014,7 @@
     <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
     <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
     <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
-    <Setter Property="aero10:TextBoxService.ViewMargin" Value="0"/>
+    <Setter Property="aero:TextBoxService.ViewMargin" Value="0"/>
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="{x:Type TextBox}">
@@ -1044,7 +1045,7 @@
                   BorderThickness="{TemplateBinding BorderThickness}"
                   BorderBrush="{TemplateBinding BorderBrush}"
                   SnapsToDevicePixels="True"
-                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="Common">
                 <VisualStateGroup.Transitions>
@@ -2803,7 +2804,7 @@
                                   Background="{StaticResource ScrollBar.ArrowButton.Normal}"
                                   LightBorderBrush="{StaticResource ScrollBar.Border.Light}"
                                   DarkBorderBrush="{StaticResource ScrollBar.Border.Dark}"
-                                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualStateGroup.Transitions>
@@ -2903,7 +2904,7 @@
                                   Background="{StaticResource ScrollBar.ArrowButton.Normal}"
                                   LightBorderBrush="{StaticResource ScrollBar.Border.Light}"
                                   DarkBorderBrush="{StaticResource ScrollBar.Border.Dark}"
-                                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualStateGroup.Transitions>
@@ -3002,7 +3003,7 @@
                                   Background="{StaticResource ScrollBar.ArrowButton.Normal}"
                                   LightBorderBrush="{StaticResource ScrollBar.Border.Light}"
                                   DarkBorderBrush="{StaticResource ScrollBar.Border.Dark}"
-                                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualStateGroup.Transitions>
@@ -3100,7 +3101,7 @@
                                   Background="{StaticResource ScrollBar.ArrowButton.Normal}"
                                   LightBorderBrush="{StaticResource ScrollBar.Border.Light}"
                                   DarkBorderBrush="{StaticResource ScrollBar.Border.Dark}"
-                                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualStateGroup.Transitions>
@@ -3197,7 +3198,7 @@
                                   SnapsToDevicePixels="True"
                                   Width="{TemplateBinding Width}"
                                   Height="{TemplateBinding Height}"
-                                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualStateGroup.Transitions>
@@ -3264,7 +3265,7 @@
                                   SnapsToDevicePixels="True"
                                   Width="{TemplateBinding Width}"
                                   Height="{TemplateBinding Height}"
-                                  VisualStateManager.CustomVisualStateManager="{x:Static aero10:DynamicVisualStateManager.Instance}">
+                                  VisualStateManager.CustomVisualStateManager="{x:Static aero:SystemVisualStateManager.Instance}">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualStateGroup.Transitions>
@@ -3818,7 +3819,7 @@
             <ColumnDefinition Width="1e300">
               <ColumnDefinition.MaxWidth>
                 <Binding RelativeSource="{RelativeSource TemplatedParent}"
-                         Converter="{x:Static aero10:TreeViewItemLevelConverter.Instance}">
+                         Converter="{x:Static aero:TreeViewItemLevelConverter.Instance}">
                   <Binding.ConverterParameter>
                     <system:Int32>19</system:Int32>
                   </Binding.ConverterParameter>
@@ -3974,7 +3975,7 @@
           </Setter.Value>
         </Setter>
       </Trigger>
-      <Trigger Property="aero10:TreeViewService.UseExplorerStyle" Value="True">
+      <Trigger Property="aero:TreeViewService.UseExplorerStyle" Value="True">
         <Setter Property="Template" Value="{StaticResource ExplorerTreeView.Template}"/>
       </Trigger>
     </Style.Triggers>
@@ -4000,10 +4001,10 @@
           </Setter.Value>
         </Setter>
       </Trigger>
-      <Trigger Property="aero10:TreeViewService.FullRowSelect" Value="True">
+      <Trigger Property="aero:TreeViewService.FullRowSelect" Value="True">
         <Setter Property="Template" Value="{StaticResource TreeViewItem.Template.FullRowSelect}"/>
       </Trigger>
-      <Trigger Property="aero10:TreeViewService.UseExplorerStyle" Value="True">
+      <Trigger Property="aero:TreeViewService.UseExplorerStyle" Value="True">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="1"/>
@@ -4013,8 +4014,8 @@
       </Trigger>
       <MultiTrigger>
         <MultiTrigger.Conditions>
-          <Condition Property="aero10:TreeViewService.FullRowSelect" Value="True"/>
-          <Condition Property="aero10:TreeViewService.UseExplorerStyle" Value="True"/>
+          <Condition Property="aero:TreeViewService.FullRowSelect" Value="True"/>
+          <Condition Property="aero:TreeViewService.UseExplorerStyle" Value="True"/>
         </MultiTrigger.Conditions>
         <Setter Property="Padding" Value="2,1,2,2"/>
         <Setter Property="Template" Value="{StaticResource ExplorerTreeViewItem.Template.FullRowSelect}"/>
@@ -4043,7 +4044,7 @@
           </Setter.Value>
         </Setter>
       </Trigger>
-      <Trigger Property="aero10:TreeViewService.FullRowSelect" Value="True">
+      <Trigger Property="aero:TreeViewService.FullRowSelect" Value="True">
         <Setter Property="Padding" Value="1,0,0,1"/>
         <Setter Property="Template" Value="{StaticResource ExplorerTreeViewItem.Template.FullRowSelect}"/>
       </Trigger>
