--- a/Source/ThemeBrowser/App.xaml
+++ b/Source/ThemeBrowser/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ThemeBrowser"
+             xmlns:aero="clr-namespace:PresentationTheme.Aero;assembly=PresentationTheme.Aero"
              xmlns:aero10="clr-namespace:PresentationTheme.Aero.Win10;assembly=PresentationTheme.Aero.Win10">
   <Application.Resources>
     <DrawingBrush x:Key="CheckeredBrush" Stretch="None" TileMode="Tile"
@@ -25,7 +26,7 @@
 
     <Style TargetType="{x:Type TreeView}"
            BasedOn="{StaticResource {x:Static aero10:ExplorerStyles.TreeViewStyleKey}}">
-      <Setter Property="aero10:TreeViewService.FullRowSelect" Value="True"/>
+      <Setter Property="aero:TreeViewService.FullRowSelect" Value="True"/>
     </Style>
   </Application.Resources>
 </Application>
